# rsplit

./: .gitignore  Cargo.toml  LICENSE  README.md  asdf.json
src/: components.rs  main.rs
