[package]
name = "rsplit"
version = "0.1.0"
authors = ["LtPeriwinkle <not.yet.periwinkle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.9", default-features = false, features = ['crossterm'] }
crossterm = "0.17"
